kubenetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
      tier: backend
  template:
    metadata:
      labels:
        app: mysql-pod
        tier: backend
    spec:
      containers:
        - name: mysql-pod
          image: mysql:8.0
          imagePullPolicy: Always
