kubenetes/production-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-deployment

spec:
    replicas: 1
    selector:
        matchLabels:
          app: production-pod
          tier: backend
    template:
        metadata:
          labels:
            app: production-pod
            tier: backend
        spec:
          containers:
          - name: production-pod
            image: wexio/production-service:latest
            imagePullPolicy: Always
