kubenetes/registration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
          app: registration-pod
          tier: backend
    template:
        metadata:
          labels:
            app: registration-pod
            tier: backend
        spec:
          containers:
          - name: registration-pod
            image: wexio/registration-service:latest
            imagePullPolicy: Always
