kubenetes/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
    selector:
        app: mail-pod
        tier: backend
    ports:
        - name: smtp
          protocol: TCP
          port: 1025
          targetPort: 1025
        - name: http
          protocol: TCP
          port: 8025
          targetPort: 8025
    type: LoadBalancer
