kubenetes/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
      tier: backend
  template:
    metadata:
      labels:
        app: mysql-pod
        tier: backend
    spec:
      containers:
        - name: mysql-pod
          image: mysql:8.0
          imagePullPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-pod
      tier: backend
  template:
    metadata:
      labels:
        app: mail-pod
        tier: backend
    spec:
      containers:
        - name: mail-pod
          image: mailhog/mailhog:latest
          imagePullPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-pod
      tier: backend
  template:
    metadata:
      labels:
        app: production-pod
        tier: backend
    spec:
      containers:
        - name: production-pod
          image: wexio/production-service:latest
          imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registration-pod
      tier: backend
  template:
    metadata:
      labels:
        app: registration-pod
        tier: backend
    spec:
      containers:
        - name: registration-pod
          image: wexio/registration-service:latest
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-pod
    tier: backend
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: http
      protocol: TCP
      port: 8025
      targetPort: 8025
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-pod
    tier: backend
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: production-service
spec:
  selector:
    app: production-pod
    tier: backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  selector:
    app: registration-pod
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
