kubenetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
    selector:
        app: mysql-pod
        tier: backend
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
    type: LoadBalancer
