kubenetes/production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-service
spec:
    selector:
        app: production-pod
        tier: backend
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
    type: LoadBalancer
