kubenetes/registration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  selector:
    app: registration-pod
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
