kubenetes/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
      - host: so.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: stage-oracle-front-service
                  port:
                    number: 3000

            - path: /registration
              pathType: Prefix
              backend:
                service:
                  name: registration-service
                  port:
                    number: 8080
            - path: /production
              pathType: Prefix
              backend:
                service:
                  name: production-service
                  port:
                    number: 8081
